--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,8 @@
 node_modules
 
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/node-rest-api/.env
+/react-client/.env
 
 npm-debug.log*
 yarn-debug.log*
